[package]
name = "habitcli"
version = "1.0.0"
edition = "2021"
authors = ["mejxe"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
directories = "5.0.1"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
sled = "0.34.7"
tokio = {version = "1.41.1", features = ["full"]}
toml = "0.8.20"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"


